--- a/src/main/resources/assets/blur/lang/sv_se.json
+++ b/src/main/resources/assets/blur/lang/sv_se.json
@@ -1,9 +1,9 @@
 {
-  "blur.midnightconfig.title": "Blur Config",
-  "blur.midnightconfig.blurExclusions": "Undantag till Blur",
-  "blur.midnightconfig.fadeTimeMillis": "Toningstid (i millisekunder)",
-  "blur.midnightconfig.radius": "Radie",
-  "blur.midnightconfig.gradientStart": "Toningsfärg (start)",
-  "blur.midnightconfig.gradientEnd": "Toningsfärg (slut)",
-  "blur.midnightconfig.showScreenTitle": "Visa skärmtitel"
+  "text.autoconfig.blur.title": "Blur Config",
+  "text.autoconfig.blur.option.blurExclusions": "Undantag till Blur",
+  "text.autoconfig.blur.option.fadeTimeMillis": "Toningstid (i millisekunder)",
+  "text.autoconfig.blur.option.radius": "Radie",
+  "text.autoconfig.blur.option.gradientStart": "Toningsfärg (start)",
+  "text.autoconfig.blur.option.gradientEnd": "Toningsfärg (slut)",
+  "text.autoconfig.blur.option.showScreenTitle": "Visa skärmtitel"
 }
