--- a/src/main/resources/assets/blur/lang/uk_ua.json
+++ b/src/main/resources/assets/blur/lang/uk_ua.json
@@ -1,12 +1,12 @@
 {
-  "blur.midnightconfig.title": "Конфігурація Blur",
-  "blur.midnightconfig.blurExclusions": "Винятки розмиття",
-  "blur.midnightconfig.fadeTimeMillis": "Час появи розмиття (у мілісекундах)",
-  "blur.midnightconfig.ease": "Пом'якшення анімації",
-  "blur.midnightconfig.radius": "Радіус",
-  "blur.midnightconfig.gradientStart": "Початковий колір градієнта",
-  "blur.midnightconfig.gradientEnd": "Кінцевий колір градієнта",
-  "blur.midnightconfig.gradientStartAlpha": "Початкова прозорість градієнта",
-  "blur.midnightconfig.gradientEndAlpha": "Кінцева прозорість градієнтаa",
-  "blur.midnightconfig.showScreenTitle": "Показати назву екрана"
+  "text.autoconfig.blur.title": "Конфігурація Blur",
+  "text.autoconfig.blur.option.blurExclusions": "Винятки розмиття",
+  "text.autoconfig.blur.option.fadeTimeMillis": "Час появи розмиття (у мілісекундах)",
+  "text.autoconfig.blur.option.ease": "Пом'якшення анімації",
+  "text.autoconfig.blur.option.radius": "Радіус",
+  "text.autoconfig.blur.option.gradientStart": "Початковий колір градієнта",
+  "text.autoconfig.blur.option.gradientEnd": "Кінцевий колір градієнта",
+  "text.autoconfig.blur.option.gradientStartAlpha": "Початкова прозорість градієнта",
+  "text.autoconfig.blur.option.gradientEndAlpha": "Кінцева прозорість градієнтаa",
+  "text.autoconfig.blur.option.showScreenTitle": "Показати назву екрана"
 }
