--- a/src/main/resources/assets/blur/lang/en_us.json
+++ b/src/main/resources/assets/blur/lang/en_us.json
@@ -11,6 +11,5 @@
   "blur.midnightconfig.gradientEnd": "Gradient End Color",
   "blur.midnightconfig.gradientStartAlpha": "Gradient Start Alpha",
   "blur.midnightconfig.gradientEndAlpha": "Gradient End Alpha",
-  "blur.midnightconfig.showScreenTitle": "Log screen title",
-  "blur.midnightconfig.strangeEffect": "Strange effect..."
+  "blur.midnightconfig.showScreenTitle": "Log screen title"
 }
